Half of a Face is Missing on Newly Created Cubes or Cylinders. #38316

Closed
opened 2014-01-22 13:36:00 +01:00 by ronan ducluzeau · 10 comments

System Information
Ubuntu 12.04 64 bits NVIDIA quadro FX 3500

Blender Version
Broken: 2.69.9 4503f82
Worked: 2.69

When we add a Mesh (Cube or Cylinder), one triangle of a quad face is missing. The face with the missing triangle is the face with the index=0 or it is an adjacent face of the one which has index=0.
In edit mode, the face is fully displayed but not in object mode and it is not rendered.

Add a Mesh Cube or Add a Cylinder.
tri.jpg

**System Information** Ubuntu 12.04 64 bits NVIDIA quadro FX 3500 **Blender Version** Broken: 2.69.9 4503f82 Worked: 2.69 When we add a Mesh (Cube or Cylinder), one triangle of a quad face is missing. The face with the missing triangle is the face with the index=0 or it is an adjacent face of the one which has index=0. In edit mode, the face is fully displayed but not in object mode and it is not rendered. Add a Mesh Cube or Add a Cylinder. ![tri.jpg](https://archive.blender.org/developer/F72159/tri.jpg)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @zeauro

Added subscriber: @zeauro

#38326 was marked as duplicate of this issue

#38326 was marked as duplicate of this issue
Bastien Montagne was assigned by Campbell Barton 2014-01-22 14:42:23 +01:00

Confirmed… and default (startup) cube is OK :/

Confirmed… and default (startup) cube is OK :/

This issue was referenced by blender/blender-addons-contrib@28ca299d4d

This issue was referenced by blender/blender-addons-contrib@28ca299d4dfc392462efd598f14b825ba8bd21ea

This issue was referenced by 28ca299d4d

This issue was referenced by 28ca299d4dfc392462efd598f14b825ba8bd21ea

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 28ca299d4d.

Closed by commit 28ca299d4d.

Added subscriber: @LOVE

Added subscriber: @LOVE

◀ Merged tasks: #38326.

◀ Merged tasks: #38326.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38316
No description provided.